# Halogen

./: .gitignore  CMakeLists.txt  Halogen.hpp  Tensor.hpp  main.cpp
Halogen/: Halogen.hpp
Halogen/Core/: Tensor.h  Tensor.hpp  TensorOperation.h
